# bsharp

./: Dockerfile  Makefile  groom.toml  pyproject.toml
bsharp/: __init__.py  __main__.py  ast.py  environment.py  evaluator.py  lexer.py  object.py  parser.py  repl.py  token.py
devops/: Dockerfile  Jenkinsfile
examples/: comment.bs  functions.bs  macro.bs  simple_function.bs  variable.bs
tests/: test_evaluator.py  test_lexer.py  test_parser.py
