[tool.poetry]
name = "bsharp"
version = "0.1.0"
description = "LISP interpreter written in Python"
authors = ["pspiagicw <pspiagicw@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pydocstyle = "^6.1.1"
pre-commit = "^2.20.0"
pytest = "^7.2.0"


[tool.poe.tasks]
test = "pytest"
run = "poetry run python -m bsharp"
doc = "poetry run pdoc -o docs bsharp"
format = [ { shell = "poetry run black bsharp tests"}, { shell = "poetry run pydocstyle"}]
init = [ { shell = "poetry install" }, { shell = "poetry run pre-commit install"} , { shell = "poetry run pre-commit "}]

[tool.pytest.ini_options]
markers = [
    "simple: It is a simple test",
    "complex: It is a complex test",
    "lexer: Tests relate to Lexer.",
    "parser: Tests relate to parser."
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
